Peg library versions

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <title></title>
-  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
   <link href="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" rel="icon"
-    type="image/x-icon" />
-  <!--tiny.cc/emptyimage-->
+    type="image/x-icon" /><!--tiny.cc/emptyimage-->
+ 
   <style>
     .centered-canvas {
       margin: 10px auto;
@@ -100,9 +100,10 @@
   </div>
 
   <script src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
-  <script src='https://unpkg.com/vue'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js'></script>
-  <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+
   <script src="colorsys.js"></script>
 
   <script>
@@ -175,8 +176,11 @@
         score() {
           let score = this.actualScore;
 
+          if(score == 0)
+            return "Perfect"
+
           let simpleScore = Math.floor(score/25);
-          let expressions = ["Lava!", "Burning hot", "Hotter", "Hot", "Warm", "Meh", "Cold", "ReallyCold", "Ice"];
+          let expressions = ["Lava", "Burning hot", "Hotter", "Hot", "Warm", "Meh", "Cold", "ReallyCold", "Ice"];
           simpleScore = Math.min(simpleScore, expressions.length - 1 )
 
           
@@ -203,7 +207,8 @@
           ctx.fillStyle = `rgb(${this.amounts.red},${this.amounts.green},${this.amounts.blue})`;
           ctx.fillRect(0, 0, this.ctx.canvas.width, this.ctx.canvas.height);
           //this.getScore();
-          this.scoreText = "[Click to See]";
+          //this.scoreText = "[Click to See]";
+          this.revealScore();
         },
         cmykConverter() {
           console.log("Converting from cmyk")
